src/decklinkcapi/cpp/decklinkcapi.h

class IDeckLink;
class IDeckLinkDiscovery;
class IDeckLinkDeviceNotificationCallback;
class IDeckLinkOutput;
class IDeckLinkProfileAttributes;
typedef void IDeckLink;
typedef void IDeckLinkDiscovery;
typedef void IDeckLinkDeviceNotificationCallback;
typedef void IDeckLinkOutput;
typedef void IDeckLinkProfileAttributes;
CAPI bool IDeckLinkDiscovery_InstallDeviceNotifications(IDeckLinkDiscovery* discovery, IDeckLinkDeviceNotificationCallback* callback);
CAPI bool IDeckLink_GetDisplayName(IDeckLink* deckLink, char* str, long long len);
CAPI IDeckLinkProfileAttributes* IDeckLink_QueryIDeckLinkProfileAttributes(IDeckLink* deckLink);
CAPI IDeckLinkOutput* IDeckLink_QueryIDeckLinkOutput(IDeckLink* deckLink);
CAPI bool IDeckLinkProfileAttributes_GetDeviceHandle(IDeckLinkProfileAttributes* attributes, char* str, long long len);
CAPI bool IDeckLinkProfileAttributes_IsActive(IDeckLinkProfileAttributes* attributes);