src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkDiscovery_InstallDeviceNotifications(IDeckLinkDiscovery *discovery, IDeckLinkDeviceNotificationCallback *callback)
     * }
     */
    public static FunctionDescriptor IDeckLinkDiscovery_InstallDeviceNotifications$descriptor() {
        return IDeckLinkDiscovery_InstallDeviceNotifications.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkDiscovery_InstallDeviceNotifications(IDeckLinkDiscovery *discovery, IDeckLinkDeviceNotificationCallback *callback)
     * }
     */
    public static MethodHandle IDeckLinkDiscovery_InstallDeviceNotifications$handle() {
        return IDeckLinkDiscovery_InstallDeviceNotifications.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkDiscovery_InstallDeviceNotifications(IDeckLinkDiscovery *discovery, IDeckLinkDeviceNotificationCallback *callback)
     * }
     */
    public static MemorySegment IDeckLinkDiscovery_InstallDeviceNotifications$address() {
        return IDeckLinkDiscovery_InstallDeviceNotifications.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkDiscovery_InstallDeviceNotifications(IDeckLinkDiscovery *discovery, IDeckLinkDeviceNotificationCallback *callback)
     * }
     */
    public static boolean IDeckLinkDiscovery_InstallDeviceNotifications(MemorySegment discovery, MemorySegment callback) {
        var mh$ = IDeckLinkDiscovery_InstallDeviceNotifications.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDiscovery_InstallDeviceNotifications", discovery, callback);
            }
            return (boolean)mh$.invokeExact(discovery, callback);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLink_GetDisplayName {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLink_GetDisplayName");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLink_GetDisplayName(IDeckLink *deckLink, char *str, long long len)
     * }
     */
    public static FunctionDescriptor IDeckLink_GetDisplayName$descriptor() {
        return IDeckLink_GetDisplayName.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLink_GetDisplayName(IDeckLink *deckLink, char *str, long long len)
     * }
     */
    public static MethodHandle IDeckLink_GetDisplayName$handle() {
        return IDeckLink_GetDisplayName.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLink_GetDisplayName(IDeckLink *deckLink, char *str, long long len)
     * }
     */
    public static MemorySegment IDeckLink_GetDisplayName$address() {
        return IDeckLink_GetDisplayName.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLink_GetDisplayName(IDeckLink *deckLink, char *str, long long len)
     * }
     */
    public static boolean IDeckLink_GetDisplayName(MemorySegment deckLink, MemorySegment str, long len) {
        var mh$ = IDeckLink_GetDisplayName.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLink_GetDisplayName", deckLink, str, len);
            }
            return (boolean)mh$.invokeExact(deckLink, str, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLink_QueryIDeckLinkProfileAttributes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLink_QueryIDeckLinkProfileAttributes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkProfileAttributes *IDeckLink_QueryIDeckLinkProfileAttributes(IDeckLink *deckLink)
     * }
     */
    public static FunctionDescriptor IDeckLink_QueryIDeckLinkProfileAttributes$descriptor() {
        return IDeckLink_QueryIDeckLinkProfileAttributes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkProfileAttributes *IDeckLink_QueryIDeckLinkProfileAttributes(IDeckLink *deckLink)
     * }
     */
    public static MethodHandle IDeckLink_QueryIDeckLinkProfileAttributes$handle() {
        return IDeckLink_QueryIDeckLinkProfileAttributes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkProfileAttributes *IDeckLink_QueryIDeckLinkProfileAttributes(IDeckLink *deckLink)
     * }
     */
    public static MemorySegment IDeckLink_QueryIDeckLinkProfileAttributes$address() {
        return IDeckLink_QueryIDeckLinkProfileAttributes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkProfileAttributes *IDeckLink_QueryIDeckLinkProfileAttributes(IDeckLink *deckLink)
     * }
     */
    public static MemorySegment IDeckLink_QueryIDeckLinkProfileAttributes(MemorySegment deckLink) {
        var mh$ = IDeckLink_QueryIDeckLinkProfileAttributes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLink_QueryIDeckLinkProfileAttributes", deckLink);
            }
            return (MemorySegment)mh$.invokeExact(deckLink);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLink_QueryIDeckLinkOutput {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLink_QueryIDeckLinkOutput");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkOutput *IDeckLink_QueryIDeckLinkOutput(IDeckLink *deckLink)
     * }
     */
    public static FunctionDescriptor IDeckLink_QueryIDeckLinkOutput$descriptor() {
        return IDeckLink_QueryIDeckLinkOutput.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkOutput *IDeckLink_QueryIDeckLinkOutput(IDeckLink *deckLink)
     * }
     */
    public static MethodHandle IDeckLink_QueryIDeckLinkOutput$handle() {
        return IDeckLink_QueryIDeckLinkOutput.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkOutput *IDeckLink_QueryIDeckLinkOutput(IDeckLink *deckLink)
     * }
     */
    public static MemorySegment IDeckLink_QueryIDeckLinkOutput$address() {
        return IDeckLink_QueryIDeckLinkOutput.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkOutput *IDeckLink_QueryIDeckLinkOutput(IDeckLink *deckLink)
     * }
     */
    public static MemorySegment IDeckLink_QueryIDeckLinkOutput(MemorySegment deckLink) {
        var mh$ = IDeckLink_QueryIDeckLinkOutput.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLink_QueryIDeckLinkOutput", deckLink);
            }
            return (MemorySegment)mh$.invokeExact(deckLink);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkProfileAttributes_GetDeviceHandle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkProfileAttributes_GetDeviceHandle");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_GetDeviceHandle(IDeckLinkProfileAttributes *attributes, char *str, long long len)
     * }
     */
    public static FunctionDescriptor IDeckLinkProfileAttributes_GetDeviceHandle$descriptor() {
        return IDeckLinkProfileAttributes_GetDeviceHandle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_GetDeviceHandle(IDeckLinkProfileAttributes *attributes, char *str, long long len)
     * }
     */
    public static MethodHandle IDeckLinkProfileAttributes_GetDeviceHandle$handle() {
        return IDeckLinkProfileAttributes_GetDeviceHandle.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_GetDeviceHandle(IDeckLinkProfileAttributes *attributes, char *str, long long len)
     * }
     */
    public static MemorySegment IDeckLinkProfileAttributes_GetDeviceHandle$address() {
        return IDeckLinkProfileAttributes_GetDeviceHandle.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_GetDeviceHandle(IDeckLinkProfileAttributes *attributes, char *str, long long len)
     * }
     */
    public static boolean IDeckLinkProfileAttributes_GetDeviceHandle(MemorySegment attributes, MemorySegment str, long len) {
        var mh$ = IDeckLinkProfileAttributes_GetDeviceHandle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkProfileAttributes_GetDeviceHandle", attributes, str, len);
            }
            return (boolean)mh$.invokeExact(attributes, str, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkProfileAttributes_IsActive {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkProfileAttributes_IsActive");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_IsActive(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static FunctionDescriptor IDeckLinkProfileAttributes_IsActive$descriptor() {
        return IDeckLinkProfileAttributes_IsActive.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_IsActive(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static MethodHandle IDeckLinkProfileAttributes_IsActive$handle() {
        return IDeckLinkProfileAttributes_IsActive.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_IsActive(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static MemorySegment IDeckLinkProfileAttributes_IsActive$address() {
        return IDeckLinkProfileAttributes_IsActive.ADDR;
    }
